Upgrade to accumulo-3.0.0,add test AccumuloConnectTest, AccumuloTableOpsTest